# tomsolver

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README-en.md  README-zh.md  README.md
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt
example/diff_machine/: CMakeLists.txt  main.cpp
example/solve/: CMakeLists.txt  main.cpp
example/solve2/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/diff_machine/: main.cpp
examples/set_initial_values/: CMakeLists.txt  main.cpp
examples/solve/: main.cpp
examples/solve2/: main.cpp
scripts/: all_tests_preheader.cpp  build_header_only.py  combine_src_to_header_only.py  combine_tests_to_single.py  pre-commit  run_me.bat  util.py
single/: CMakeLists.txt
single/include/tomsolver/: tomsolver.h  tomsolver.hpp
single/test/: CMakeLists.txt  all_tests.cpp
src/: TExpressionTree.cpp  TExpressionTree.h  TVariableTable.cpp  TVariableTable.h  config.cpp  config.h  diff.cpp  diff.h  error_type.cpp  error_type.h  functions.h  linear.cpp  linear.h  mat.cpp  mat.h  math_operator.cpp  math_operator.h  matrix.cpp  matrix.h  memory_leak_detection.h  memory_leak_detection_win.h  node.cpp  node.h  nonlinear.cpp  nonlinear.h  parse.cpp  parse.h  simplify.cpp  simplify.h  subs.cpp  subs.h  symmat.cpp  symmat.h  tomsolver.h  vars_table.cpp  vars_table.h
src/tomsolver/: config.cpp  config.h  diff.h  error_type.cpp  error_type.h  linear.cpp  mat.cpp  math_operator.cpp  math_operator.h  node.cpp  node.h  nonlinear.cpp  nonlinear.h  parse.cpp  parse.h  simplify.h  subs.h  symmat.cpp  tomsolver.h  vars_table.cpp  vars_table.h
test/: CMakeLists.txt  diff_test.cpp  functions_test.cpp  helper.cpp  helper.h  linear_test.cpp  mat_test.cpp  matrix_test.cpp  memory_leak_detection.h  memory_leak_detection_win.h  node_test.cpp  parse_test.cpp  power_test.cpp  random_test.cpp  simplify_test.cpp  solve_base_test.cpp  solve_test.cpp  subs_test.cpp  symmat_test.cpp  test.cpp  to_string_test.cpp
tests/: CMakeLists.txt  diff_test.cpp  functions_test.cpp  helper.cpp  helper.h  linear_test.cpp  mat_test.cpp  node_test.cpp  parse_test.cpp  power_test.cpp  random_test.cpp  simplify_test.cpp  solve_base_test.cpp  solve_test.cpp  subs_test.cpp  symmat_test.cpp  to_string_test.cpp
